packages/vapor/scss/elements/btn.scss
@mixin button-variant($color, $background) {
    color: $color;
    background-color: $background;
    border: $button-border-width solid $background;

    &:hover,
    &:focus {
        background-color: lighten($background, 5%);
        border: $button-border-width solid lighten($background, 5%);
    }

    &:disabled,
    &.state-disabled {
        background-color: lighten($background, 20%);
        border: $button-border-width solid lighten($background, 20%);
    }

    .icon {
        fill: $color;
    }
}

@mixin button-focus($offset) {
    background-color: $light-grey;

    @include focus-border($offset);
}

.btn {
    display: inline-block;
    box-sizing: border-box;
    height: $button-height;
    padding: $button-padding-y $button-padding-x;
    color: $medium-blue;
    font-weight: $button-font-weight;
    font-size: $button-font-size;
    font-family: $base-font-family;
    line-height: $button-line-height;
    white-space: nowrap;
    text-transform: uppercase;
    text-decoration: none;
    text-overflow: ellipsis;
    vertical-align: middle;
    background-color: $pure-white;
    border: $button-border-width solid $medium-grey;
    border-radius: $border-radius;

    cursor: pointer;

    .icon:not([class*='fill-']) {
        fill: $medium-blue;
    }

    &:hover,
    &:focus {
        text-decoration: none;
    }

    &:focus {
        @include button-focus(-2px);
    }

    &:disabled,
    &.state-disabled {
        color: $medium-grey;
        cursor: default;
        pointer-events: none;

        .icon {
            fill: $medium-grey;
        }
    }

    &.mod-small {
        height: $button-small-height;
        padding: $button-small-padding-y $button-small-padding-x;
        font-size: $button-small-font-size;
        line-height: $button-small-line-height;
    }

    &.mod-large {
        height: $button-large-height;
    }

    &.mod-primary {
        @include button-variant($pure-white, $orange);
    }

    &.mod-danger {
        @include button-variant($pure-white, $red);
    }

    &.mod-link {
        background-color: transparent;
        border: none;
    }

    & + .btn,
    + .btn-container {
        margin-left: $button-margin-width;
    }

    .confirm-icon-error,
    .confirm-icon-success {
        display: none;
    }

    &.mod-confirm-success,
    &.mod-confirm-error {
        position: relative;
        color: transparent;
        outline: 0;
        transition: background-color 0.2s ease;
        user-select: none;

        &:before {
            position: absolute;
            top: $button-height + 6px;
            font-size: 11px;
            text-transform: initial;
            opacity: 0;
            animation: vp-fadeIn ease-in 1;
            animation-duration: 0.3s;
            animation-fill-mode: forwards;
        }

        &.mod-confirm-right:before {
            right: 0;
        }

        &.mod-confirm-left:before {
            left: 0;
        }

        .confirm-icon-error,
        .confirm-icon-success {
            position: absolute;
            top: calc(50% - #{$button-confirm-icon-width} / 2);
            right: calc(50% - #{$button-confirm-icon-width} / 2);
            display: inline-block;
            font-size: $button-confirm-icon-width;
            fill: $pure-white;
        }
    }

    &.mod-confirm {
        margin-bottom: $button-confirm-margin-bottom;
    }

    &.mod-confirm-success {
        background-color: $green;
        border: $button-border-width solid $green;

        &:focus,
        &:hover {
            background-color: $green;
        }

        &:before {
            color: $green;
            content: attr(data-confirm-success);
        }

        .confirm-icon-error {
            display: none;
        }
    }

    &.mod-confirm-error {
        background-color: $red;
        border: $button-border-width solid $red;

        &:focus,
        &:hover {
            background-color: $red;
        }

        &:before {
            color: $red;
            content: attr(data-confirm-error);
        }

        .confirm-icon-success {
            display: none;
        }
    }

    &.collapsible-header {
        border-radius: 0;
    }
}

.btn-container {
    display: inline-block;
    margin: 0;

    .btn[disabled] {
        pointer-events: none;
    }

    & + .btn,
    + .btn-container {
        margin-left: $button-margin-width;
    }
}

.btn-hover:hover {
    .icon {
        fill: $links-color;
    }

    .btn-hover-text {
        color: $links-color;
    }
}

